--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.22.6",
+    "@sveltejs/vite-plugin-svelte": "^2.4.5",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "eslint": "^8.48.0",
@@ -21,8 +22,7 @@
     "prettier-plugin-svelte": "^3.0.3",
     "svelte": "^4.2.0",
     "svelte-check": "^3.5.0",
-    "vite": "^4.4.9",
-    "@sveltejs/vite-plugin-svelte": "^2.4.5"
+    "vite": "^4.4.9"
   },
   "prettier": {
     "printWidth": 100,
@@ -32,6 +32,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "moment": "^2.29.4",
+    "node-fetch": "^3.3.2",
     "uikit": "^3.16.26",
     "uikit-icons": "^0.5.0"
   }
